tests/base/parser/bad/exps/exp_t-let-id-eq-string-in-with.scilexp
let a = 0x1234 in (* missing a *)
